--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
   "name": "envoys-admin-frontend",
   "version": "0.1.0",
   "private": true,
+  "husky": {
+    "hooks": {
+      "pre-commit": "npx pretty-quick --staged"
+    }
+  },
   "dependencies": {
     "@ethersproject/providers": "^5.7.2",
     "@testing-library/jest-dom": "^5.14.1",
