--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "husky": {
     "hooks": {
-      "pre-commit": "npx pretty-quick --staged"
+      "pre-commit": "yarn format:check:staged"
     }
   },
   "dependencies": {
@@ -21,6 +21,8 @@
     "@web3-react/core": "^6.1.9",
     "@web3-react/injected-connector": "^6.0.7",
     "bootstrap": "^5.2.2",
+    "prettier": "^2.7.1",
+    "pretty-quick": "^3.1.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
@@ -37,7 +39,10 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "postinstall": "npm run typechain",
-    "typechain": "typechain --target ethers-v5 --out-dir src/abi/types 'src/abi/*.json'"
+    "typechain": "typechain --target ethers-v5 --out-dir src/abi/types 'src/abi/*.json'",
+    "format:check": "prettier --check \"**/*.{js,jsx,ts,tsx}\"",
+    "format:check:staged": "pretty-quick --staged --check",
+    "format:write": "prettier --write \"**/*.{js,jsx,ts,tsx}\""
   },
   "eslintConfig": {
     "extends": [
