--- a/package.json
+++ b/package.json
@@ -2,11 +2,6 @@
   "name": "envoys-admin-frontend",
   "version": "0.1.0",
   "private": true,
-  "husky": {
-    "hooks": {
-      "pre-commit": "yarn format:check:staged"
-    }
-  },
   "dependencies": {
     "@ethersproject/providers": "^5.7.2",
     "@testing-library/jest-dom": "^5.14.1",
@@ -21,6 +16,7 @@
     "@web3-react/core": "^6.1.9",
     "@web3-react/injected-connector": "^6.0.7",
     "bootstrap": "^5.2.2",
+    "husky": "^8.0.1",
     "prettier": "^2.7.1",
     "pretty-quick": "^3.1.3",
     "react": "^18.2.0",
@@ -42,7 +38,8 @@
     "typechain": "typechain --target ethers-v5 --out-dir src/abi/types 'src/abi/*.json'",
     "format:check": "prettier --check \"**/*.{js,jsx,ts,tsx}\"",
     "format:check:staged": "pretty-quick --staged --check",
-    "format:write": "prettier --write \"**/*.{js,jsx,ts,tsx}\""
+    "format:write": "prettier --write \"**/*.{js,jsx,ts,tsx}\"",
+    "prepare": "husky install"
   },
   "eslintConfig": {
     "extends": [
