--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
-API_URL=https://api.beta.envoys.vision/
-RPC_URL=https://data-seed-prebsc-1-s1.binance.org:8545/
-CHAIN_ID=97
+REACT_APP_API_URL=http://127.0.0.1:3003/
+REACT_APP_RPC_URL=https://data-seed-prebsc-1-s1.binance.org:8545/
+REACT_APP_CHAIN_ID=97
