--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "envoys-admin-frontend",
+  "homepage": "https://envoys-lab.github.io/envoys-admin-frontend/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
