--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "styled-components": "^5.3.6",
     "typechain": "^8.1.0",
     "typescript": "^4.4.2",
-    "web-vitals": "^2.1.0"
+    "web-vitals": "^2.1.0",
+    "ethers": "^5.7.2"
   },
   "scripts": {
     "start": "react-scripts start",
