--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@types/styled-components": "^5.1.26",
     "@web3-react/core": "^6.1.9",
     "@web3-react/injected-connector": "^6.0.7",
+    "axios": "^1.1.3",
     "bootstrap": "^5.2.2",
+    "ethers": "^5.7.2",
     "husky": "^8.0.1",
     "prettier": "^2.7.1",
     "pretty-quick": "^3.1.3",
@@ -28,8 +30,7 @@
     "styled-components": "^5.3.6",
     "typechain": "^8.1.0",
     "typescript": "^4.4.2",
-    "web-vitals": "^2.1.0",
-    "ethers": "^5.7.2"
+    "web-vitals": "^2.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
