--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
-    "react-scripts": "5.0.1",
     "styled-components": "^5.3.6",
     "typechain": "^8.1.0",
     "typescript": "^4.4.2",
@@ -34,7 +33,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "npm run typechain && react-scripts build",
+    "build": "npm run typechain && react-scripts --max_old_space_size=100000 build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "postinstall": "npm run typechain",
@@ -65,6 +64,7 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^4.0.0"
+    "gh-pages": "^4.0.0",
+    "react-scripts": "5.0.1"
   }
 }
