--- a/.github/workflows/Deploy.yml
+++ b/.github/workflows/Deploy.yml
@@ -26,9 +26,7 @@ jobs:
       run: npm install --frozen-lockfile
 
     - name: Build
-      run: npm run build
-      env:
-        CI: false
+      run: CI='' npm run build
 
     - name: Deploy
       run: |
