--- a/.github/workflows/Deploy.yml
+++ b/.github/workflows/Deploy.yml
@@ -25,6 +25,9 @@ jobs:
     - name: Install dependencies
       run: npm install --frozen-lockfile
 
+    - name: Add default env file
+      run: cp .env.example .env
+
     - name: Deploy
       run: |
         git config --global user.name $user_name
